# kaon-data-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/assets/: demo.tape  demo_output.txt  demo_report.html  gen_screenshot.py
examples/demo/: config.yaml  seed_demo_db.py
examples/demo/knowledge/: index.json  metrics.md  product.md  tables.md
playbooks/: ab_experiment.md  diagnostic.md  exploratory.md
src/l3_agent/: __init__.py  cli.py  config.py  report.py
src/l3_agent/adapters/: database.py  llm.py
src/l3_agent/agent/: base_tool.py  compressors.py  executor.py  planner.py
src/l3_agent/context/: manager.py
src/l3_agent/playbooks/: base.py
src/l3_agent/tools/: builtin.py
